# hermes

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Pipfile  README.md  conftest.py  example_schedule.py  hermes.py  hermes_tests.sh  mypy.ini  pyproject.toml  pytest.ini  schedule.py  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
hermes/: __init__.py  categorypool.py  chores.py  cli.py  clients.py  schedule.py  span.py  stochastics.py  tag.py  timeaccount.py  timespan.py  utils.py
hermes/clients/: gcal.py
hermes/scheduler/: __init__.py  constraint.py  expression.py  model.py  schedule.py
misc/: README.md  prof.py
tests/: conftest.py  example_time_account.rst  factories.py  test_bootstrap.py  test_schedules.py  test_spans.py  test_tags.py  test_timeaccount.py  test_timespan.py
tests/fixtures/: timeaccount.py
tests/integration/: README.md  test_gcal.py
