[tool.poetry]
name = "hermes"
version = "0.1.0"
description = "Hermes the Time Accountant provides a sliceable timeline with tagged events."
authors = ["Erich Blume <blume.erich@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
attrs = "^18.2"
google-api-python-client = "^1.7"
oauth2client = "^4.1"
python-dateutil = "^2.7"
appdirs = "^1.4"
apsw = "^3.9"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
pytest = "^4.0"
pytest-watch = "^4.2"
pytest-cov = "^2.6"
pytest-xdist = "^1.24"
pytest-pep8 = "^1.0"
pdbpp = "^0.9.2"
pygments = "^2.2"
black = "^18.3-alpha.0"
flake8 = "^3.6"
flake8-import-order = "^0.18.0"
pre-commit = "^1.12"
mypy = "^0.641.0"
factory-boy = "^2.11"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
