[tool.poetry]
name = "hermes"
version = "0.2.4"
description = "Hermes the Time Accountant provides a sliceable timeline with tagged events."
authors = ["Erich Blume <blume.erich@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7"
python-dateutil = "^2"
appdirs = "^1"
apsw = "^3"
ortools = "^7.4"
google-auth = "^1"
google-auth-oauthlib = "^0"
scipy = "^1.3"
requests = "^2.22"
pytz = ">=2019.2"

[tool.poetry.dev-dependencies]
coverage = "^4"
pytest = "^4"
pytest-watch = "^4"
pytest-cov = "^2"
pytest-xdist = "^1"
pytest-pep8 = "^1"
pdbpp = "^0"
pygments = "^2"
black = "^19.3b0"
flake8 = "^3"
flake8-import-order = "^0"
pre-commit = "^1"
mypy = "^0"
pytest-sugar = "^0"
tox = "^3.13"
matplotlib = "^3.1"

[tool.poetry.scripts]
hermes-exec = 'hermes.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


